--- a/src/lenguajes/project/index.html
+++ b/src/lenguajes/project/index.html
@@ -29,9 +29,7 @@ and open the template in the editor.
         </style>
     </head>
     <body>
-        <div ><iframe name="sqlFrame" class="leftPanel" src="http://localhost/phpmyadmin/index.php"></iframe></div>
+        <div ><iframe name="sqlFrame" class="leftPanel" src="http://127.0.0.1/phpmyadmin/index.php"></iframe></div>
         <div ><iframe  class="rightPanel" src="http://localhost:7474"></iframe></div>
-        
-        <p><a href="http://localhost/phpmyadmin/index.php?token=878c9db4280f7244c0eedc5ef9e9e63a" target="sqlFrame">W3Schools.com</a></p>
     </body>
 </html>
